--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Brandon Tilley <brandon@brandontilley.com>",
   "license": "MIT",
   "dependencies": {
-    "toml": "~2.0.2",
+    "toml": ">=2.0.2",
     "semver": "~2.2.1"
   },
   "engines": {
