--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "Brandon Tilley <brandon@brandontilley.com>",
   "license": "MIT",
   "dependencies": {
-    "toml": ">=2.0.2",
-    "semver": "~2.2.1"
+    "semver": "^5.6.0",
+    "toml": ">=2.0.2"
   },
   "engines": {
     "node": ">= 0.6"
